updated html files

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                 </li>
 
                 <li id="liRight">
-                    <a href="portfolio.html">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
 
             </ul>
