Now with completed Portfolio Section

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,11 +48,25 @@
 
                 <div class="folio-set">
                 
-                    <div class="folio1"></div>
-                    <div class="folio2"></div>
-                    <div class="folio3"></div>
-                    <div class="folio4"></div>
-                    <div class="folio5"></div>  
+                    <div class="folio-size folio1">
+                        <div class="folio-banner">Scientific</div>
+                    </div>
+
+                    <div class="folio-size folio2">
+                        <div class="folio-banner">Culinary</div>
+                    </div>
+
+                    <div class=" folio-size folio3">
+                        <div class="folio-banner">Horticultural</div>
+                    </div>
+
+                    <div class="folio-size folio4">
+                            <div class="folio-banner">Fitness</div>
+                    </div>
+
+                    <div class=" folio-size folio5">
+                            <div class="folio-banner">Entomological</div>
+                    </div>  
 
                 </div>
                 
@@ -92,11 +106,6 @@
             </sidebar>
 
     </div>
-
-    <footer>
-            &copy; Copyright 2018 Patrick Kearney
-    </footer>
-
 
 </body>
 
