--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,9 @@
                     </div>
 
                     <div class="folio-size folio2">
-                        <div class="folio-banner">Culinary</div>
+                        <div class="folio-banner">
+                            <a id="crystal-game" href="https://pckearney25.github.io/week-4-game">Crystal Collector</a>
+                        </div>
                     </div>
 
                     <div class=" folio-size folio3">
