Trivia Game Added

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,9 @@
                     </div>
 
                     <div class=" folio-size folio3">
-                        <div class="folio-banner">Horticultural</div>
+                        <div class="folio-banner">
+                            <a id="trivia-game" href="https://pckearney25.github.io/TriviaGame">Trivia Game</a>
+                        </div>
                     </div>
 
                     <div class="folio-size folio4">
