--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,9 @@
                     </div>
 
                     <div class="folio-size folio4">
-                            <div class="folio-banner">Fitness</div>
+                            <div class="folio-banner">
+                                <a id="trivia-game" href="https://pckearney25.github.io/AJAX_JSON_assignment">AJAX and APIs</a>
+                            </div>
                     </div>
 
                     <div class=" folio-size folio5">
