Firebase homeowrk added

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,12 +66,14 @@
 
                     <div class="folio-size folio4">
                             <div class="folio-banner">
-                                <a id="trivia-game" href="https://pckearney25.github.io/AJAX_JSON_assignment">AJAX and APIs</a>
+                                <a id="ajax" href="https://pckearney25.github.io/AJAX_JSON_assignment">AJAX and APIs</a>
                             </div>
                     </div>
 
                     <div class=" folio-size folio5">
-                            <div class="folio-banner">Entomological</div>
+                        <div class="folio-banner">
+                            <a id="firebase" href="https://pckearney25.github.io/Steamtown_Station">Firebase</a>
+                        </div>
                     </div>  
 
                 </div>
