--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,12 @@
                     </div>
                 </div>
 
+                <div class=" folio-size folio6">
+                    <div class="folio-banner">
+                        <a id="node.js" href="https://github.com/pckearney25/liri-node-app">Node.js</a>
+                    </div>
+                </div>
+
             </div>
 
             <!--Groups the different projecttypes.-->
