--- a/portfolio.html
+++ b/portfolio.html
@@ -86,6 +86,18 @@
                     </div>
                 </div>
 
+                <div class=" folio-size folio7">
+                    <div class="folio-banner">
+                        <a id="firebase" href="https://github.com/pckearney25/bamazon">MySQL</a>
+                    </div>
+                </div>
+
+                <div class=" folio-size folio8">
+                    <div class="folio-banner">
+                        <a id="node.js" href="https://infinite-ravine-77207.herokuapp.com" />Express.js</a>
+                    </div>
+                </div>
+
             </div>
 
             <!--Groups the different projecttypes.-->
